Fix incorrect warnings

--- a/src/main/webapp/app/entities/camera/camera-dialog.html
+++ b/src/main/webapp/app/entities/camera/camera-dialog.html
@@ -67,11 +67,11 @@
             <div ng-show="editForm.angle.$invalid">
                 <p class="help-block"
                    ng-show="editForm.angle.$error.min" translate-value-min="0">
-                    This field should be more than 0.
+                    The angle should be more than 0.
                 </p>
                 <p class="help-block"
                    ng-show="editForm.angle.$error.max">
-                    This field cannot be more than 100.
+                    The angle cannot be more than 360.
                 </p>
                 <p class="help-block"
                    ng-show="editForm.angle.$error.number">
