--- a/src/main/webapp/app/map/camera-map-dialog.html
+++ b/src/main/webapp/app/map/camera-map-dialog.html
@@ -15,7 +15,7 @@
             <div ng-show="editForm.name.$invalid">
                 <p class="help-block"
                    ng-show="editForm.name.$error.required">
-                    This field is required.
+                    The name is required.
                 </p>
             </div>
         </div>
