--- a/src/main/webapp/app/entities/map/map-detail.html
+++ b/src/main/webapp/app/entities/map/map-detail.html
@@ -8,9 +8,9 @@
             <span>{{vm.map.name}}</span>
         </dd>
         <hr>
-        <dt><span translate="thefirstorderApp.map.background_image">Background Image</span></dt>
+        <dt><span translate="thefirstorderApp.map.backgroundImage">Background Image</span></dt>
         <dd>
-            <span>{{vm.map.background_image}}</span>
+            <span>{{vm.map.backgroundImage}}</span>
         </dd>
         <hr>
     </dl>
