--- a/src/main/webapp/app/entities/map/map-dialog.html
+++ b/src/main/webapp/app/entities/map/map-dialog.html
@@ -20,9 +20,9 @@
                      />
         </div>
         <div class="form-group">
-            <label class="control-label" translate="thefirstorderApp.map.background_image" for="field_background_image">Background Image</label>
-            <input type="text" class="form-control" name="background_image" id="field_background_image"
-                    ng-model="vm.map.background_image"
+            <label class="control-label" translate="thefirstorderApp.map.backgroundImage" for="field_background_image">Background Image</label>
+            <input type="text" class="form-control" name="backgroundImage" id="field_background_image"
+                    ng-model="vm.map.backgroundImage"
                      />
         </div>
 
