Added score field to script entity

--- a/src/main/webapp/app/entities/script/script-detail.html
+++ b/src/main/webapp/app/entities/script/script-detail.html
@@ -8,6 +8,11 @@
             <span>{{vm.script.name}}</span>
         </dd>
         <hr>
+        <dt><span>Score</span></dt>
+        <dd>
+            <span>{{vm.script.score}}</span>
+        </dd>
+        <hr>
     </dl>
 
     <button type="submit"
