--- a/src/main/webapp/app/entities/script/script-dialog.html
+++ b/src/main/webapp/app/entities/script/script-dialog.html
@@ -19,6 +19,12 @@
                     ng-model="vm.script.name"
                      />
         </div>
+        <div class="form-group">
+            <label class="control-label" for="field_score">Score</label>
+            <input type="text" class="form-control" name="score" id="field_score"
+                    ng-model="vm.script.score"
+                     />
+        </div>
 
     </div>
     <div class="modal-footer">
