--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="content/css/custom.css">
     <link rel="stylesheet" href="content/css/bootstrap-material-design.css" />
     <link rel="stylesheet" href="content/css/ripples.css" />
+    <link rel="stylesheet" href="content/css/vertical-timeline.css" />
     <!-- endbuild -->
 </head>
 <body ng-app="thefirstorderApp">
@@ -71,6 +72,7 @@
     <script src="bower_components/file-saver.js/FileSaver.js"></script>
     <script src="bower_components/angular-file-saver/dist/angular-file-saver.bundle.js"></script>
     <script src="bower_components/vis/dist/vis.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -81,6 +83,18 @@
     <script src="app/account/reset/request/reset.request.controller.js"></script>
     <script src="app/account/reset/finish/reset.finish.state.js"></script>
     <script src="app/account/reset/finish/reset.finish.controller.js"></script>
+    <script src="app/setup/script/script-setup.state.js"></script>
+    <script src="app/setup/script/script-setup.controller.js"></script>
+    <script src="app/setup/script/loadscript-dialog.controller.js"></script>
+    <script src="app/setup/script/createscript-dialog.controller.js"></script>
+    <script src="app/setup/project/noproject.state.js"></script>
+    <script src="app/setup/project/noproject.controller.js"></script>
+    <script src="app/setup/map/map-setup.state.js"></script>
+    <script src="app/setup/map/map-setup.controller.js"></script>
+    <script src="app/setup/map/loadmap-dialog.controller.js"></script>
+    <script src="app/setup/map/createmap-dialog.controller.js"></script>
+    <script src="app/services/user/user.service.js"></script>
+    <script src="app/services/user/project-manager.service.js"></script>
     <script src="app/services/auth/register.service.js"></script>
     <script src="app/services/auth/principal.service.js"></script>
     <script src="app/services/auth/password.service.js"></script>
@@ -92,17 +106,9 @@
     <script src="app/services/auth/auth.oauth2.service.js"></script>
     <script src="app/services/auth/activate.service.js"></script>
     <script src="app/services/auth/account.service.js"></script>
-    <script src="app/services/user/user.service.js"></script>
-    <script src="app/services/user/project-manager.service.js"></script>
     <script src="app/layouts/navbar/navbar.controller.js"></script>
     <script src="app/layouts/navbar/active-link.directive.js"></script>
     <script src="app/layouts/error/error.state.js"></script>
-    <script src="app/entities/time-point/time-point.state.js"></script>
-    <script src="app/entities/time-point/time-point.service.js"></script>
-    <script src="app/entities/time-point/time-point.controller.js"></script>
-    <script src="app/entities/time-point/time-point-dialog.controller.js"></script>
-    <script src="app/entities/time-point/time-point-detail.controller.js"></script>
-    <script src="app/entities/time-point/time-point-delete-dialog.controller.js"></script>
     <script src="app/entities/script/script.state.js"></script>
     <script src="app/entities/script/script.service.js"></script>
     <script src="app/entities/script/script.controller.js"></script>
@@ -135,12 +141,6 @@
     <script src="app/entities/cue/cue-dialog.controller.js"></script>
     <script src="app/entities/cue/cue-detail.controller.js"></script>
     <script src="app/entities/cue/cue-delete-dialog.controller.js"></script>
-    <script src="app/entities/camera-action/camera-action.state.js"></script>
-    <script src="app/entities/camera-action/camera-action.service.js"></script>
-    <script src="app/entities/camera-action/camera-action.controller.js"></script>
-    <script src="app/entities/camera-action/camera-action-dialog.controller.js"></script>
-    <script src="app/entities/camera-action/camera-action-detail.controller.js"></script>
-    <script src="app/entities/camera-action/camera-action-delete-dialog.controller.js"></script>
     <script src="app/entities/camera/camera.state.js"></script>
     <script src="app/entities/camera/camera.service.js"></script>
     <script src="app/entities/camera/camera.controller.js"></script>
@@ -213,10 +213,16 @@
     <script src="app/account/password/password-strength-bar.directive.js"></script>
     <script src="app/account/activate/activate.state.js"></script>
     <script src="app/account/activate/activate.controller.js"></script>
-    <script src="app/timeline/timeline.state.js"></script>
-    <script src="app/timeline/timeline.controller.js"></script>
-    <script src="app/map/mapview.state.js"></script>
-    <script src="app/map/mapview.controller.js"></script>
+    <script src="app/scripting/timeline.directive.js"></script>
+    <script src="app/scripting/scripting.state.js"></script>
+    <script src="app/scripting/scripting.controller.js"></script>
+    <script src="app/map/map-table.directive.js"></script>
+    <script src="app/map/map-editor.state.js"></script>
+    <script src="app/map/map-editor.controller.js"></script>
+    <script src="app/map/load-background-dialog.controller.js"></script>
+    <script src="app/map/fabric-map.directive.js"></script>
+    <script src="app/live/live.state.js"></script>
+    <script src="app/live/live.controller.js"></script>
     <script src="app/home/loadproject-dialog.controller.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
