Added image upload for score

--- a/src/main/webapp/app/map/load-background-dialog.html
+++ b/src/main/webapp/app/map/load-background-dialog.html
@@ -16,7 +16,7 @@
         <div class="row centered">
             <h3>Preview</h3>
             <div class="col-md-12">
-                <div id="concertMap" class="preview">
+                <div id="backgroundPreview" class="preview">
                 </div>
             </div>
         </div>
