Removed update button

--- a/src/main/webapp/app/map/map-table-view-template.html
+++ b/src/main/webapp/app/map/map-table-view-template.html
@@ -1,9 +1,8 @@
-<button type="button" class="btn btn-raised" ng-click="vm.update()"><span class="glyphicon glyphicon-refresh"
-                                                                          aria-hidden="true"></span> Update
-</button>
-<button type="button" class="btn btn-raised" ui-sref="map.load-background"><span class="glyphicon glyphicon-blackboard"
-                                                                                 aria-hidden="true"></span> Change
-    background
+<button type="button"
+        class="btn btn-raised"
+        ui-sref="map.load-background">
+    <span class="glyphicon glyphicon-blackboard" aria-hidden="true"></span>
+    Change background
 </button>
 <table class="table table-hover">
     <thead>
