Split pdf upload and image upload

--- a/src/main/webapp/app/scripting/scripting.html
+++ b/src/main/webapp/app/scripting/scripting.html
@@ -19,7 +19,7 @@
                         </button>
                     </div>
                     <timeline map="vm.map" selected="vm.selected"></timeline>
-                    <canvas fabric-score score="vm.score"></canvas>
+                    <embed src="content/upload/9963qgekudt8r0r2pft74jfsmlauo164ofc6nb1pdo671e0e064.pdf" width="100%" height="900px" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
                 </div>
             </div>
         </div>
