--- a/src/main/webapp/app/scripting/load-score-dialog.html
+++ b/src/main/webapp/app/scripting/load-score-dialog.html
@@ -1,4 +1,4 @@
-<form name="editForm" role="form" novalidate ng-submit="vm.upload()">
+<form name="editForm" novalidate role="form" ng-submit="vm.upload()">
 
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
@@ -13,18 +13,19 @@
                                                                    aria-hidden="true"></span> Select a score</label>
             </div>
         </div>
-        <div class="row centered">
-            <h3>Preview</h3>
-            <div class="col-md-12">
-                <div id="scorePreview" class="preview">
-                </div>
+        <div class="row centered" ng-switch="vm.hasPreview">
+            <div ng-switch-when="false">
+                Please select a pdf file.
+            </div>
+            <div ng-switch-when="true">
+                Selected: {{vm.previewName}}
             </div>
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
                 <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span>Cancel</span>
             </button>
-            <button type="submit" ng-disabled="vm.isUploading" class="btn btn-primary">
+            <button type="submit" ng-disabled="!vm.hasPreview" class="btn btn-primary">
                 <span class="glyphicon glyphicon-save"></span>&nbsp;<span>Load</span>
             </button>
         </div>
