--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -69,14 +69,29 @@
     <!-- build:js app/app.js  -->
     <!-- inject:js -->
     <script src="app/app.module.js"></script>
-    <script src="app/account/reset/request/reset.request.state.js"></script>
-    <script src="app/account/reset/request/reset.request.controller.js"></script>
     <script src="app/account/reset/finish/reset.finish.state.js"></script>
     <script src="app/account/reset/finish/reset.finish.controller.js"></script>
-    <script src="app/blocks/config/localstorage.config.js"></script>
-    <script src="app/blocks/config/http.config.js"></script>
-    <script src="app/blocks/config/compile.config.js"></script>
-    <script src="app/blocks/config/alert.config.js"></script>
+    <script src="app/account/reset/request/reset.request.state.js"></script>
+    <script src="app/account/reset/request/reset.request.controller.js"></script>
+    <script src="app/account/settings/settings.state.js"></script>
+    <script src="app/account/settings/settings.controller.js"></script>
+    <script src="app/account/password/password.state.js"></script>
+    <script src="app/account/password/password.controller.js"></script>
+    <script src="app/account/password/password-strength-bar.directive.js"></script>
+    <script src="app/account/register/register.state.js"></script>
+    <script src="app/account/register/register.controller.js"></script>
+    <script src="app/account/activate/activate.state.js"></script>
+    <script src="app/account/activate/activate.controller.js"></script>
+    <script src="app/setup/project/noproject.state.js"></script>
+    <script src="app/setup/project/noproject.controller.js"></script>
+    <script src="app/setup/map/map-setup.state.js"></script>
+    <script src="app/setup/map/map-setup.controller.js"></script>
+    <script src="app/setup/map/loadmap-dialog.controller.js"></script>
+    <script src="app/setup/map/createmap-dialog.controller.js"></script>
+    <script src="app/setup/script/script-setup.state.js"></script>
+    <script src="app/setup/script/script-setup.controller.js"></script>
+    <script src="app/setup/script/loadscript-dialog.controller.js"></script>
+    <script src="app/setup/script/createscript-dialog.controller.js"></script>
     <script src="app/services/auth/register.service.js"></script>
     <script src="app/services/auth/principal.service.js"></script>
     <script src="app/services/auth/password.service.js"></script>
@@ -90,19 +105,24 @@
     <script src="app/services/auth/account.service.js"></script>
     <script src="app/services/user/user.service.js"></script>
     <script src="app/services/user/project-manager.service.js"></script>
-    <script src="app/setup/project/noproject.state.js"></script>
-    <script src="app/setup/project/noproject.controller.js"></script>
-    <script src="app/setup/script/script-setup.state.js"></script>
-    <script src="app/setup/script/script-setup.controller.js"></script>
-    <script src="app/setup/script/loadscript-dialog.controller.js"></script>
-    <script src="app/setup/script/createscript-dialog.controller.js"></script>
-    <script src="app/setup/map/map-setup.state.js"></script>
-    <script src="app/setup/map/map-setup.controller.js"></script>
-    <script src="app/setup/map/loadmap-dialog.controller.js"></script>
-    <script src="app/setup/map/createmap-dialog.controller.js"></script>
-    <script src="app/layouts/error/error.state.js"></script>
     <script src="app/layouts/navbar/navbar.controller.js"></script>
     <script src="app/layouts/navbar/active-link.directive.js"></script>
+    <script src="app/layouts/error/error.state.js"></script>
+    <script src="app/components/alert/alert.service.js"></script>
+    <script src="app/components/alert/alert.directive.js"></script>
+    <script src="app/components/alert/alert-error.directive.js"></script>
+    <script src="app/entities/player/player.state.js"></script>
+    <script src="app/entities/player/player.service.js"></script>
+    <script src="app/entities/player/player.controller.js"></script>
+    <script src="app/entities/player/player-dialog.controller.js"></script>
+    <script src="app/entities/player/player-detail.controller.js"></script>
+    <script src="app/entities/player/player-delete-dialog.controller.js"></script>
+    <script src="app/entities/script/script.state.js"></script>
+    <script src="app/entities/script/script.service.js"></script>
+    <script src="app/entities/script/script.controller.js"></script>
+    <script src="app/entities/script/script-dialog.controller.js"></script>
+    <script src="app/entities/script/script-detail.controller.js"></script>
+    <script src="app/entities/script/script-delete-dialog.controller.js"></script>
     <script src="app/entities/project/project.state.js"></script>
     <script src="app/entities/project/project.service.js"></script>
     <script src="app/entities/project/project.controller.js"></script>
@@ -111,24 +131,26 @@
     <script src="app/entities/project/project-dialog.controller.js"></script>
     <script src="app/entities/project/project-detail.controller.js"></script>
     <script src="app/entities/project/project-delete-dialog.controller.js"></script>
-    <script src="app/entities/script/script.state.js"></script>
-    <script src="app/entities/script/script.service.js"></script>
-    <script src="app/entities/script/script.controller.js"></script>
-    <script src="app/entities/script/script-dialog.controller.js"></script>
-    <script src="app/entities/script/script-detail.controller.js"></script>
-    <script src="app/entities/script/script-delete-dialog.controller.js"></script>
-    <script src="app/entities/player/player.state.js"></script>
-    <script src="app/entities/player/player.service.js"></script>
-    <script src="app/entities/player/player.controller.js"></script>
-    <script src="app/entities/player/player-dialog.controller.js"></script>
-    <script src="app/entities/player/player-detail.controller.js"></script>
-    <script src="app/entities/player/player-delete-dialog.controller.js"></script>
     <script src="app/entities/map/map.state.js"></script>
     <script src="app/entities/map/map.service.js"></script>
     <script src="app/entities/map/map.controller.js"></script>
     <script src="app/entities/map/map-dialog.controller.js"></script>
     <script src="app/entities/map/map-detail.controller.js"></script>
     <script src="app/entities/map/map-delete-dialog.controller.js"></script>
+    <script src="app/entities/cue/cue.state.js"></script>
+    <script src="app/entities/cue/cue.service.js"></script>
+    <script src="app/entities/cue/cue.controller.js"></script>
+    <script src="app/entities/cue/cue-dialog.controller.js"></script>
+    <script src="app/entities/cue/cue-detail.controller.js"></script>
+    <script src="app/entities/cue/cue-delete-dialog.controller.js"></script>
+    <script src="app/entities/camera/camera.state.js"></script>
+    <script src="app/entities/camera/camera.service.js"></script>
+    <script src="app/entities/camera/camera.controller.js"></script>
+    <script src="app/entities/camera/camera-dialog.controller.js"></script>
+    <script src="app/entities/camera/camera-detail.controller.js"></script>
+    <script src="app/entities/camera/camera-delete-dialog.controller.js"></script>
+    <script src="app/components/login/login.service.js"></script>
+    <script src="app/components/login/login.controller.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
     <script src="app/components/util/sort.directive.js"></script>
@@ -140,93 +162,73 @@
     <script src="app/components/util/data-util.service.js"></script>
     <script src="app/components/util/capitalize.filter.js"></script>
     <script src="app/components/util/base64.service.js"></script>
-    <script src="app/entities/camera/camera.state.js"></script>
-    <script src="app/entities/camera/camera.service.js"></script>
-    <script src="app/entities/camera/camera.controller.js"></script>
-    <script src="app/entities/camera/camera-dialog.controller.js"></script>
-    <script src="app/entities/camera/camera-detail.controller.js"></script>
-    <script src="app/entities/camera/camera-delete-dialog.controller.js"></script>
-    <script src="app/entities/cue/cue.state.js"></script>
-    <script src="app/entities/cue/cue.service.js"></script>
-    <script src="app/entities/cue/cue.controller.js"></script>
-    <script src="app/entities/cue/cue-dialog.controller.js"></script>
-    <script src="app/entities/cue/cue-detail.controller.js"></script>
-    <script src="app/entities/cue/cue-delete-dialog.controller.js"></script>
-    <script src="app/components/login/login.service.js"></script>
-    <script src="app/components/login/login.controller.js"></script>
     <script src="app/components/form/uib-pagination.config.js"></script>
     <script src="app/components/form/uib-pager.config.js"></script>
     <script src="app/components/form/show-validation.directive.js"></script>
     <script src="app/components/form/pagination.constants.js"></script>
     <script src="app/components/form/minbytes.directive.js"></script>
     <script src="app/components/form/maxbytes.directive.js"></script>
+    <script src="app/blocks/handlers/state.handler.js"></script>
     <script src="app/blocks/interceptor/notification.interceptor.js"></script>
     <script src="app/blocks/interceptor/errorhandler.interceptor.js"></script>
     <script src="app/blocks/interceptor/auth.interceptor.js"></script>
     <script src="app/blocks/interceptor/auth-expired.interceptor.js"></script>
-    <script src="app/components/alert/alert.service.js"></script>
-    <script src="app/components/alert/alert.directive.js"></script>
-    <script src="app/components/alert/alert-error.directive.js"></script>
-    <script src="app/blocks/handlers/state.handler.js"></script>
+    <script src="app/blocks/config/localstorage.config.js"></script>
+    <script src="app/blocks/config/http.config.js"></script>
+    <script src="app/blocks/config/compile.config.js"></script>
+    <script src="app/blocks/config/alert.config.js"></script>
+    <script src="app/admin/metrics/metrics.state.js"></script>
+    <script src="app/admin/metrics/metrics.service.js"></script>
+    <script src="app/admin/metrics/metrics.modal.controller.js"></script>
+    <script src="app/admin/metrics/metrics.controller.js"></script>
     <script src="app/admin/user-management/user-management.state.js"></script>
     <script src="app/admin/user-management/user-management.controller.js"></script>
     <script src="app/admin/user-management/user-management-dialog.controller.js"></script>
     <script src="app/admin/user-management/user-management-detail.controller.js"></script>
     <script src="app/admin/user-management/user-management-delete-dialog.controller.js"></script>
-    <script src="app/admin/metrics/metrics.state.js"></script>
-    <script src="app/admin/metrics/metrics.service.js"></script>
-    <script src="app/admin/metrics/metrics.modal.controller.js"></script>
-    <script src="app/admin/metrics/metrics.controller.js"></script>
+    <script src="app/admin/tracker/tracker.state.js"></script>
+    <script src="app/admin/tracker/tracker.service.js"></script>
+    <script src="app/admin/tracker/tracker.controller.js"></script>
     <script src="app/admin/logs/logs.state.js"></script>
     <script src="app/admin/logs/logs.service.js"></script>
     <script src="app/admin/logs/logs.controller.js"></script>
+    <script src="app/admin/docs/docs.state.js"></script>
     <script src="app/admin/health/health.state.js"></script>
     <script src="app/admin/health/health.service.js"></script>
     <script src="app/admin/health/health.modal.controller.js"></script>
     <script src="app/admin/health/health.controller.js"></script>
-    <script src="app/account/settings/settings.state.js"></script>
-    <script src="app/account/settings/settings.controller.js"></script>
-    <script src="app/admin/tracker/tracker.state.js"></script>
-    <script src="app/admin/tracker/tracker.service.js"></script>
-    <script src="app/admin/tracker/tracker.controller.js"></script>
-    <script src="app/admin/docs/docs.state.js"></script>
     <script src="app/admin/configuration/configuration.state.js"></script>
     <script src="app/admin/configuration/configuration.service.js"></script>
     <script src="app/admin/configuration/configuration.controller.js"></script>
     <script src="app/admin/audits/audits.state.js"></script>
     <script src="app/admin/audits/audits.service.js"></script>
     <script src="app/admin/audits/audits.controller.js"></script>
-    <script src="app/account/password/password.state.js"></script>
-    <script src="app/account/password/password.controller.js"></script>
-    <script src="app/account/password/password-strength-bar.directive.js"></script>
-    <script src="app/account/register/register.state.js"></script>
-    <script src="app/account/register/register.controller.js"></script>
-    <script src="app/account/activate/activate.state.js"></script>
-    <script src="app/account/activate/activate.controller.js"></script>
-    <script src="app/live/live.state.js"></script>
-    <script src="app/live/live.controller.js"></script>
+    <script src="app/account/account.state.js"></script>
     <script src="app/scripting/timeline.directive.js"></script>
     <script src="app/scripting/scripting.state.js"></script>
     <script src="app/scripting/scripting.controller.js"></script>
-    <script src="app/home/loadproject-dialog.controller.js"></script>
-    <script src="app/home/home.state.js"></script>
-    <script src="app/home/home.controller.js"></script>
-    <script src="app/home/createproject-dialog.controller.js"></script>
     <script src="app/map/map.constants.js"></script>
     <script src="app/map/map-table.directive.js"></script>
     <script src="app/map/map-editor.state.js"></script>
     <script src="app/map/map-editor.controller.js"></script>
     <script src="app/map/load-background-dialog.controller.js"></script>
     <script src="app/map/fabric-map.directive.js"></script>
+    <script src="app/map/fabric-map-dialog.service.js"></script>
+    <script src="app/live/live.state.js"></script>
+    <script src="app/live/live.controller.js"></script>
+    <script src="app/home/loadproject-dialog.controller.js"></script>
+    <script src="app/home/home.state.js"></script>
+    <script src="app/home/home.controller.js"></script>
+    <script src="app/home/createproject-dialog.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
     <script src="app/admin/admin.state.js"></script>
-    <script src="app/account/account.state.js"></script>
     <script src="app/app.state.js"></script>
     <script src="app/app.constants.js"></script>
     <!-- endinject -->
     <!-- endbuild -->
     <script src="content/js/material.js"></script>
     <script src="content/js/ripples.js"></script>
+    <script src="content/js/fabric.canvasex.js"></script>
     <script type="text/javascript">
         $.material.init();
         $.material.ripples();
