Moved uibModal dialogs to separate service.

--- a/src/main/webapp/app/map/map-table-view-template.html
+++ b/src/main/webapp/app/map/map-table-view-template.html
@@ -40,7 +40,7 @@
         </td>
     </tr>
 
-    <tr class="btn btn-raised btn-xs" ng-click="vm.addCamera()">
+    <tr class="btn btn-raised btn-xs" ng-click="vm.addCamera(vm.project.map)">
         <td></td>
         <td>Add camera</td>
         <td></td>
@@ -83,7 +83,7 @@
         </td>
     </tr>
 
-    <tr class="btn btn-raised btn-xs" ng-click="vm.addPlayer()">
+    <tr class="btn btn-raised btn-xs" ng-click="vm.addPlayer(vm.project.map)">
         <td></td>
         <td>Add player</td>
         <td></td>
