--- a/src/main/webapp/app/live/live.html
+++ b/src/main/webapp/app/live/live.html
@@ -34,7 +34,7 @@
                     <div class="timeline-badge" ng-class="'timeline-badge' + ($index % 3 + 1)"><i class="glyphicon glyphicon-map-marker text-center"></i></div>
                     <div id="{{$index}}" class="timeline-panel" ng-class="{'timeline-focus':$first}">
                         <div class="timeline-heading">
-                            <h4 class="timeline-title">{{cue.cameraAction.name}}</h4>
+                            <h4 class="timeline-title">{{cue.action}}</h4>
                             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> From bar {{cue.bar}} to bar {{cue.bar + cue.duration}}</small></p>
                         </div>
                         <hr />
