--- a/src/main/webapp/app/live/live.html
+++ b/src/main/webapp/app/live/live.html
@@ -3,7 +3,7 @@
         <h1 class="text-center">Live Preview</h1>
 
         <div class="row">
-            <div class="col-lg-12 table-responsive">
+            <div class="col-lg-6 table-responsive">
                 <table class="table table-striped table-responsive">
                     <thead>
                     <tr>
@@ -25,12 +25,18 @@
                     </tbody>
                 </table>
             </div>
+            <div class="col-lg-6">
+                <h3>Select camera</h3>
+                <select class="form-control" id="camera" ng-model="cameraSelect">
+                    <option ng-repeat="camera in vm.cameras" value="{{camera.id}}">{{camera.name}}</option>
+                </select>
+            </div>
         </div>
         <br />
 
         <div id="vertical-timeline" class="col-lg-offset-2 col-lg-8">
             <ul id="timeline-ul" class="timeline">
-                <li ng-class-even="'timeline-inverted'" ng-repeat="cue in vm.cues | orderBy:'bar'">
+                <li ng-class-even="'timeline-inverted'" ng-hide="cue.camera.id != cameraSelect" ng-repeat="cue in vm.cues | orderBy:'bar'">
                     <div class="timeline-badge" ng-class="'timeline-badge' + ($index % 3 + 1)"><i class="glyphicon glyphicon-map-marker text-center"></i></div>
                     <div id="{{$index}}" class="timeline-panel" ng-class="{'timeline-focus':$first}">
                         <div class="timeline-heading">
