--- a/src/main/webapp/app/live/live.html
+++ b/src/main/webapp/app/live/live.html
@@ -4,6 +4,7 @@
 
         <div class="row">
             <div class="col-lg-6 table-responsive">
+                <h3>Other Users</h3>
                 <table class="table table-striped table-responsive">
                     <thead>
                     <tr>
