Change focus to name field.

--- a/src/main/webapp/app/map/choose-entity-map-dialog.html
+++ b/src/main/webapp/app/map/choose-entity-map-dialog.html
@@ -3,7 +3,7 @@
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="vm.clear()">&times;</button>
-        <h4 class="modal-title">Choose player or camera</h4>
+        <h4 class="modal-title">Add player or camera</h4>
     </div>
     <div class="modal-body">
         <button type="button" class="btn btn-default" ng-click="vm.addPlayer()">
