Make all icons clickable

--- a/src/main/webapp/app/setup/project/noproject.html
+++ b/src/main/webapp/app/setup/project/noproject.html
@@ -7,7 +7,7 @@
             <p class="lead" ng-switch-when="false">We were unable to open the project you selected...</p>
             <br/><br/><br/>
             <div class="row">
-                <div class="col-md-12"><span class="glyphicon glyphicon-log-in" style="font-size: 60pt;"></span>
+                <div class="col-md-12"><span class="glyphicon glyphicon-log-in" ui-sref="home" style="font-size: 60pt;"></span>
                     <hr/>
                     <p class="lead">
                         <button class="btn btn-primary"
