--- a/src/main/webapp/app/setup/map/map-setup.html
+++ b/src/main/webapp/app/setup/map/map-setup.html
@@ -5,7 +5,7 @@
         <p class="lead">This project does not have a map yet, please select an option:</p>
         <br/><br/><br/>
         <div class="row">
-            <div class="col-md-6"><span class="glyphicon glyphicon-globe" style="font-size: 60pt;"></span>
+            <div class="col-md-6"><span class="glyphicon glyphicon-globe" ui-sref="map.create" style="font-size: 60pt;"></span>
                 <hr/>
                 <p class="lead">
                     <button class="btn btn-primary"
@@ -15,7 +15,7 @@
                     </button>
                 </p>
             </div>
-            <div class="col-md-6"><span class="glyphicon glyphicon-folder-open" style="font-size: 60pt;"></span>
+            <div class="col-md-6"><span class="glyphicon glyphicon-folder-open" ui-sref="map.load" style="font-size: 60pt;"></span>
                 <hr/>
                 <p class="lead">
                     <button class="btn btn-primary"
