Added `fabric-map-dialog.service.js` to `index.html`

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -213,6 +213,7 @@
 <script src="app/map/map-editor.controller.js"></script>
 <script src="app/map/load-background-dialog.controller.js"></script>
 <script src="app/map/fabric-map.directive.js"></script>
+<script src="app/map/fabric-map-dialog.service.js"></script>
 <script src="app/live/live.state.js"></script>
 <script src="app/live/live.controller.js"></script>
 <script src="app/home/loadproject-dialog.controller.js"></script>
